@@ -17,6 +17,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+Change to have objects generated by creator properly fixed up (material,
+for potions, spell object, etc).
+---
+common/treasure.c: add GT_MINIMAL flag to change_treasure() to do minimal
+   processing for objects created.
+include/treasure.h: Add GT_MINIMAL define.
+server/apply.c:  Add call to fix_generated_item() in convert_item()
+MSW 2005-04-27
+
 Various minor bugfixes.
 common/los.c: Patch to fix negative lighting.  Use isqrt instead of sqrt,
   so we only want integer values anyways.
